postcss/testData/inspections/media/incorrectSignDirection.pcss
@media (200px <error descr="Media query range operators should have equal direction"><=</error> height
    <error descr="Media query range operators should have equal direction">>=</error> 400px){}